Bug 1916394 - [devtools] Adapt project search result matches in High Contrast Mode. r=devtools-reviewers,ochameau.
Differential Revision: https://phabricator.services.mozilla.com/D223340

--- a/devtools/client/debugger/src/components/PrimaryPanes/ProjectSearch.css
+++ b/devtools/client/debugger/src/components/PrimaryPanes/ProjectSearch.css
@@ -68,15 +68,9 @@
 }
 
 .project-text-search .result .query-match {
-  border-bottom: 1px solid var(--theme-contrast-border);
-  color: var(--theme-contrast-color);
-  background-color: var(--theme-contrast-background);
-}
-
-.project-text-search .result.focused .query-match {
-  border-bottom: none;
-  color: var(--theme-selection-background);
-  background-color: var(--theme-selection-color);
+  border-bottom: 1px solid var(--theme-search-results-border-color);
+  color: var(--theme-search-results-color);
+  background-color: var(--theme-search-results-background);
 }
 
 .project-text-search .tree-indent {
