--- a/devtools/client/netmonitor/src/assets/styles/search.css
+++ b/devtools/client/netmonitor/src/assets/styles/search.css
@@ -77,9 +77,9 @@ button.case-sensitive-btn {
 
 /* Color for query matches */
 .search-panel .resultCell .query-match {
-  background-color: var(--theme-contrast-background);
-  color: var(--theme-contrast-color);
-  border-bottom: 1px solid var(--theme-contrast-border);
+  background-color: var(--theme-search-results-background);
+  color: var(--theme-search-results-color);
+  border-bottom: 1px solid var(--theme-search-results-border-color);
 }
 
 .search-modifiers {
